--- a/objects/objects.html
+++ b/objects/objects.html
@@ -3,5 +3,6 @@
 <head>"Objects"</head>
 <script src = objects.js></script>
 <script src = object-methods.js></script>
+<script src = object-construction.js></script>
 
 </html>
