--- a/objects/objects.html
+++ b/objects/objects.html
@@ -4,5 +4,6 @@
 <script src = objects.js></script>
 <script src = object-methods.js></script>
 <script src = object-construction.js></script>
+<script src = object-destructuring.js></script>
 
 </html>
